--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,9 @@
     <div class="soundboard">
         <!-- Sound buttons -->
         <button class="sound-button" data-sound="Honest To God.mp3">Sound 1</button>
+        <button class="sound-button" data-sound="Honest To God.mp3">Sound 2</button>
+        <button class="sound-button" data-sound="Honest To God.mp3">Sound 3</button>
+        <button class="sound-button" data-sound="Honest To God.mp3">Sound 4</button>    
     </div>
 
     <script src="script.js"></script> <!-- Link to JavaScript file -->
