--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Soundboard</h1>
     <div class="soundboard">
         <!-- Sound buttons -->
-        <button class="sound-button" data-sound="Honest To God.mp3">Sound 1</button>
+        <button class="sound-button" data-sound="Honest To God.mp3">Honest To God</button>
         <button class="sound-button" data-sound="sound2.mp3">Sound 2</button>
         <button class="sound-button" data-sound="sound3.mp3">Sound 3</button>
         <button class="sound-button" data-sound="sound4.mp3">Sound 4</button>
