--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"> <!-- Link to CSS file -->
 </head>
 <body>
-    <h1>Merry Christmas Vicki Miller The Driller</h1>
+    <h1>Merry Christmas Miller The Driller</h1>
     <div class="soundboard">
         <!-- Sound buttons -->
         <button class="sound-button" data-sound="Honest To God.mp3">Honest To God</button>
