--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Merry Christmas Miller The Driller</h1>
-    <div class="soundboard">
+    <div class="Merry Christmas Miller The Driller">
         <!-- Sound buttons -->
         <button class="sound-button" data-sound="Honest To God.mp3">Honest To God</button>
         <button class="sound-button" data-sound="sound2.mp3">Sound 2</button>
