--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
     <div class="Merry Christmas Miller The Driller">
         <!-- Sound buttons -->
         <button class="sound-button" data-sound="Honest To God.mp3">Honest To God</button>
-        <button class="sound-button" data-sound="sound2.mp3">Sound 2</button>
-        <button class="sound-button" data-sound="sound3.mp3">Sound 3</button>
-        <button class="sound-button" data-sound="sound4.mp3">Sound 4</button>
+        <button class="sound-button" data-sound="Happy Days.mp3">Happy Days</button>
+        <button class="sound-button" data-sound="humwhistle.mp3">Hum-Whistle</button>
+        <button class="sound-button" data-sound="infinityyyyy.mp3">Infinityyyyy</button>
+        <button class="sound-button" data-sound="Chelpin on about Rovers.mp3">Chelpin On About Rovers</button>
+        <button class="sound-button" data-sound="dedededur.mp3">Dedeedee</button>
+        <button class="sound-button" data-sound="badabadabam.mp3">Badaadabam</button>
+        <button class="sound-button" data-sound="babababaaah.mp3">Babaababah</button>
+        <button class="sound-button" data-sound="Good News First.mp3">Always The Optimist</button>
+        <button class="sound-button" data-sound="overun by 5 min.mp3">Overrun</button>
     </div>
 
     <script src="script.js"></script> <!-- Link to JavaScript file -->
