--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Merry Christmas Miller The Driller</h1>
-    <div class="Merry Christmas Miller The Driller">
+    <div class="A Christmas Millercle">
         <!-- Sound buttons -->
         <button class="sound-button" data-sound="Honest To God.mp3">Honest To God</button>
         <button class="sound-button" data-sound="Happy Days.mp3">Happy Days</button>
