--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soundboard</title>
     <link rel="stylesheet" href="style.css"> <!-- Link to CSS file -->
+    <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>A Christmas Miller-cle</h1>
-    <div class="A Christmas Millercle">
+    <div class="div-sound-buttons">
         <!-- Sound buttons -->
         <button class="sound-button" data-sound="Honest To God.mp3">Honest To God</button>
         <button class="sound-button" data-sound="Happy Days.mp3">Happy Days</button>
@@ -20,6 +21,8 @@
         <button class="sound-button" data-sound="babababaaah.mp3">Babaababah</button>
         <button class="sound-button" data-sound="Good News First.mp3">Always The Optimist</button>
         <button class="sound-button" data-sound="overun by 5 min.mp3">Overrun</button>
+        <button class="sound-button" data-sound="No Dramas.mp3">No Dramas</button>
+        <button class="sound-button" data-sound="Herding Cats.mp3">Herding Cats</button>
     </div>
 
     <script src="script.js"></script> <!-- Link to JavaScript file -->
